Layout & paragraph spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: auto
+  height: auto;
+  min-height: 100%;
 }
 
 code {
